<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">

            <TextView
                style="@style/MyStyleFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainTitle"
                tools:ignore="TextContrastCheck,VisualLintOverlap" />

            <TextView
                style="@style/typicalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginJeden"
                android:text="@string/titleOne"
                tools:ignore="TextContrastCheck,VisualLintOverlap" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subTitleOne"
                style="@style/normalText"
                android:layout_marginTop="@dimen/marginDwa"
                tools:ignore="VisualLintOverlap" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/first"
                android:layout_marginTop="@dimen/marginTrzy"
                android:layout_marginBottom="@dimen/marginCztery"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/typicalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginPiec"
                android:text="@string/titleTwo"
                tools:ignore="TextContrastCheck,VisualLintOverlap" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subTitleTwo"
                style="@style/normalText"
                android:layout_marginTop="@dimen/marginSzesc"
                tools:ignore="VisualLintOverlap" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twice"
                android:layout_marginTop="@dimen/marginSiedem"
                android:layout_marginBottom="@dimen/marginCztery"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleThree"
                style="@style/typicalTitle"
                android:layout_marginTop="@dimen/marginOsiem"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subTitleThree"
                style="@style/normalText"
                android:layout_marginTop="@dimen/marginDziewiec"
                tools:ignore="VisualLintOverlap" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tree"
                android:layout_marginTop="@dimen/marginDziesiec"
                android:layout_marginBottom="@dimen/marginCztery"
                tools:ignore="ContentDescription" />




        </RelativeLayout>
    </ScrollView>

</RelativeLayout>